Changes landing page

--- a/src/Web/LearningPlusWebApp/Views/Home/Index.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Home/Index.cshtml
@@ -97,68 +97,54 @@
       Testimonials Section
     ============================-->
     <section class="testimonials">
-        <div class="container">
-            <div class="section-header">
-                <h2>Препоръки</h2>
-                <p>Мненията на нашите ученици и партньори.</p>
+        <div class="section-header">
+            <h2>Препоръки</h2>
+            <p>Мненията на нашите ученици и партньори.</p>
+        </div>
+        <div class="wrapper">
+
+            <div class="testimonial-item">
+                <p>
+                    <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
+                    Екип и материали създадени за Вас и вашите нужди за да ви направят по-добри от всички.
+                    <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
+                </p>
+                <img src="img/testimonial-1.jpg" class="testimonial-img" alt="">
+                <h3>Дани Минчев</h3>
+                <h4>Директор &amp; Основател</h4>
             </div>
-            <div class="owl-carousel testimonials-carousel">
 
-                <div class="testimonial-item">
-                    <p>
-                        <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
-                        Екип и материали създадени за Вас и вашите нужди за да ви направят по-добри от всички.
-                        <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
-                    </p>
-                    <img src="img/testimonial-1.jpg" class="testimonial-img" alt="">
-                    <h3>Дани Минчев</h3>
-                    <h4>Директор &amp; Основател</h4>
-                </div>
+            <div class="testimonial-item">
+                <p>
+                    <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
+                    Обучението е на високо ниво и всички материали съответстват на актуалните учебни програми.
+                    <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
+                </p>
+                <img src="img/testimonial-2.jpg" class="testimonial-img" alt="">
+                <h3>Сара Каплан</h3>
+                <h4>Родител</h4>
+            </div>
 
-                <div class="testimonial-item">
-                    <p>
-                        <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
-                        Обучението е на високо ниво и всички материали съответстват на актуалните учебни програми.
-                        <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
-                    </p>
-                    <img src="img/testimonial-2.jpg" class="testimonial-img" alt="">
-                    <h3>Сара Каплан</h3>
-                    <h4>Родител</h4>
-                </div>
+            <div class="testimonial-item">
+                <p>
+                    <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
+                    Постигнах невероятни резултати благодарение на преподавателите и материалите в учебния център.
+                    <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
+                </p>
+                <img src="img/testimonial-3.jpg" class="testimonial-img" alt="">
+                <h3>Жени Кирова</h3>
+                <h4>Ученик</h4>
+            </div>
 
-                <div class="testimonial-item">
-                    <p>
-                        <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
-                        Постигнах невероятни резултати благодарение на преподавателите и материалите в учебния център.
-                        <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
-                    </p>
-                    <img src="img/testimonial-3.jpg" class="testimonial-img" alt="">
-                    <h3>Жени Кирова</h3>
-                    <h4>Ученик</h4>
-                </div>
-
-                <div class="testimonial-item">
-                    <p>
-                        <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
-                        Невероятен старт за детето ми в първи клас. Представи се невероятно! Благодаря Ви!
-                        <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
-                    </p>
-                    <img src="img/testimonial-4.jpg" class="testimonial-img" alt="">
-                    <h3>Матей Борисов</h3>
-                    <h4>Родител</h4>
-                </div>
-
-                <div class="testimonial-item">
-                    <p>
-                        <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
-                        Страхотен екип с когото се работи лесно и и пред които успехът тепърва предстои.
-                        <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
-                    </p>
-                    <img src="img/testimonial-5.jpg" class="testimonial-img" alt="">
-                    <h3>Иван Лефтеров</h3>
-                    <h4>Предприемач</h4>
-                </div>
-
+            <div class="testimonial-item">
+                <p>
+                    <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
+                    Страхотен екип с когото се работи лесно и и пред които успехът тепърва предстои.
+                    <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
+                </p>
+                <img src="img/testimonial-5.jpg" class="testimonial-img" alt="">
+                <h3>Иван Лефтеров</h3>
+                <h4>Предприемач</h4>
             </div>
 
         </div>
@@ -167,72 +153,62 @@
       Our Team Section
     ============================-->
     <section class="team">
-        <div class="container">
-            <div class="section-header">
-                <h2>Нашите преподаватели</h2>
+        <div class="section-header">
+            <h2>Нашите преподаватели</h2>
+        </div>
+        <div class="wrapper">
+            <div class="member">
+                <div class="pic"><img src="img/team-1.jpg" alt=""></div>
+                <div class="details">
+                    <h4>Иван Иванов</h4>
+                    <span>Учител по история</span>
+                    <div class="social">
+                        <a href=""><i class="fa fa-twitter"></i></a>
+                        <a href=""><i class="fa fa-facebook"></i></a>
+                        <a href=""><i class="fa fa-google-plus"></i></a>
+                        <a href=""><i class="fa fa-linkedin"></i></a>
+                    </div>
+                </div>
             </div>
-            <div class="row">
-                <div class="col-lg-3 col-md-6">
-                    <div class="member">
-                        <div class="pic"><img src="img/team-1.jpg" alt=""></div>
-                        <div class="details">
-                            <h4>Иван Иванов</h4>
-                            <span>Учител по история</span>
-                            <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-facebook"></i></a>
-                                <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
-                            </div>
-                        </div>
+
+            <div class="member">
+                <div class="pic"><img src="img/team-2.jpg" alt=""></div>
+                <div class="details">
+                    <h4>Нина Николова</h4>
+                    <span>Учител по английски език</span>
+                    <div class="social">
+                        <a href=""><i class="fa fa-twitter"></i></a>
+                        <a href=""><i class="fa fa-facebook"></i></a>
+                        <a href=""><i class="fa fa-google-plus"></i></a>
+                        <a href=""><i class="fa fa-linkedin"></i></a>
                     </div>
                 </div>
+            </div>
 
-                <div class="col-lg-3 col-md-6">
-                    <div class="member">
-                        <div class="pic"><img src="img/team-2.jpg" alt=""></div>
-                        <div class="details">
-                            <h4>Нина Николова</h4>
-                            <span>Учител по английски език</span>
-                            <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-facebook"></i></a>
-                                <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
-                            </div>
-                        </div>
+            <div class="member">
+                <div class="pic"><img src="img/team-3.jpg" alt=""></div>
+                <div class="details">
+                    <h4>Велислав Донков</h4>
+                    <span>Учител по математика</span>
+                    <div class="social">
+                        <a href=""><i class="fa fa-twitter"></i></a>
+                        <a href=""><i class="fa fa-facebook"></i></a>
+                        <a href=""><i class="fa fa-google-plus"></i></a>
+                        <a href=""><i class="fa fa-linkedin"></i></a>
                     </div>
                 </div>
+            </div>
 
-                <div class="col-lg-3 col-md-6">
-                    <div class="member">
-                        <div class="pic"><img src="img/team-3.jpg" alt=""></div>
-                        <div class="details">
-                            <h4>Велислав Донков</h4>
-                            <span>Учител по математика</span>
-                            <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-facebook"></i></a>
-                                <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-6">
-                    <div class="member">
-                        <div class="pic"><img src="img/team-4.jpg" alt=""></div>
-                        <div class="details">
-                            <h4>Дани Монева</h4>
-                            <span>Учител по български език и л-ра</span>
-                            <div class="social">
-                                <a href=""><i class="fa fa-twitter"></i></a>
-                                <a href=""><i class="fa fa-facebook"></i></a>
-                                <a href=""><i class="fa fa-google-plus"></i></a>
-                                <a href=""><i class="fa fa-linkedin"></i></a>
-                            </div>
-                        </div>
+            <div class="member">
+                <div class="pic"><img src="img/team-4.jpg" alt=""></div>
+                <div class="details">
+                    <h4>Дани Монева</h4>
+                    <span>Учител по български език и л-ра</span>
+                    <div class="social">
+                        <a href=""><i class="fa fa-twitter"></i></a>
+                        <a href=""><i class="fa fa-facebook"></i></a>
+                        <a href=""><i class="fa fa-google-plus"></i></a>
+                        <a href=""><i class="fa fa-linkedin"></i></a>
                     </div>
                 </div>
             </div>
@@ -243,75 +219,63 @@
       Contact Section
     ============================-->
     <section class="contact">
-        <div class="container">
-            <div class="section-header">
-                <h2>Задайте ни въпрос</h2>
-                <p>
-                    Центърът за извън класна подготовка се намира на удобно място в квартал Хладилника
-                    и за повече информация може да ни зададете въпрос във формата за контакт или на посочените имейл и телефон,
-                    както и да ни откриете на картата.
-                </p>
-            </div>
+        <div class="section-header">
+            <h2>Задайте ни въпрос</h2>
+            <p>
+                Центърът за извън класна подготовка се намира на удобно място в квартал Хладилника
+                и за повече информация може да ни зададете въпрос във формата за контакт или на посочените имейл и телефон,
+                както и да ни откриете на картата.
+            </p>
+        </div>
 
-            <div class="row contact-info">
+        <div class="wrapper">
+            <div class="contact-info">
 
-                <div class="col-md-4">
-                    <div class="contact-address">
-                        <i class="ion-ios-location-outline"></i>
-                        <h3>Адрес</h3>
-                        <address>ж.к. Хладилника, ул. Банат 16А, София, България</address>
-                    </div>
+                <div class="contact-address">
+                    <i class="ion-ios-location-outline"></i>
+                    <h3>Адрес</h3>
+                    <address><a href="#">ж.к. Хладилника, ул. Банат 16А, София, България</a></address>
                 </div>
 
-                <div class="col-md-4">
-                    <div class="contact-phone">
-                        <i class="ion-ios-telephone-outline"></i>
-                        <h3>Телефонен номер</h3>
-                        <p><a href="tel:+155895548855">0883 48-35-09</a></p>
-                    </div>
+                <div class="contact-phone">
+                    <i class="ion-ios-telephone-outline"></i>
+                    <h3>Телефонен номер</h3>
+                    <p><a href="tel:+359883483509">0883 48-35-09</a></p>
                 </div>
 
-                <div class="col-md-4">
-                    <div class="contact-email">
-                        <i class="ion-ios-email-outline"></i>
-                        <h3>Имейл</h3>
-                        <p><a href="mailto:svetleto_gb@abv.bg">svetleto_gb@abv.bg</a></p>
-                    </div>
+                <div class="contact-email">
+                    <i class="ion-ios-email-outline"></i>
+                    <h3>Имейл</h3>
+                    <p><a href="mailto:svetleto_gb@abv.bg">svetleto_gb@abv.bg</a></p>
                 </div>
 
             </div>
         </div>
 
-        <div class="container mb-4">
+        <div class="google-map">
             <iframe src="https://www.google.com/maps/embed/v1/place?q=42.6621927,23.3151003&key=@Configuration[" GoogleApiKey"]"></iframe>
         </div>
 
-        <div class="container">
-            <div class="form">
-                <div id="sendmessage">Вашето съобщение е изпратено успешно!</div>
-                <div id="errormessage"></div>
-                <form asp-controller="Email" asp-action="SendFromHome" method="post" role="form" class="contactForm">
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <input type="text" name="name" class="form-control" id="name" placeholder="Вашето име" data-rule="minlen:4" data-msg="Моля, въведете поне четири символа!" />
-                            <div class="validation"></div>
-                        </div>
-                        <div class="form-group col-md-6">
-                            <input type="email" class="form-control" name="email" id="email" placeholder="Вашият имейл" data-rule="email" data-msg="Моля, виведете валиден имейл!" />
-                            <div class="validation"></div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <input type="text" class="form-control" name="subject" id="subject" placeholder="Относно" data-rule="minlen:4" data-msg="Моля, въведете текст от поне четири символа!" />
-                        <div class="validation"></div>
-                    </div>
-                    <div class="form-group">
-                        <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Напишете ни нещо" placeholder="Съобщение..."></textarea>
-                        <div class="validation"></div>
-                    </div>
-                    <div class="text-center"><button type="submit">Изпрати запитване</button></div>
-                </form>
-            </div>
+        <div class="form">
+            <div id="sendmessage">Вашето съобщение е изпратено успешно!</div>
+            <div id="errormessage"></div>
+            <form asp-controller="Email" asp-action="SendFromHome" method="post" role="form" class="contactForm">
+                <div class="name">
+                    <input type="text" name="name" class="form-control" id="name" placeholder="Вашето име" data-rule="minlen:4" data-msg="Моля, въведете поне четири символа!" />
+                    <div class="validation"></div>
+                </div>
+                <div class="email">
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Вашият имейл" data-rule="email" data-msg="Моля, виведете валиден имейл!" />
+                    <div class="validation"></div>
+                </div>
+                <div class="subject">
+                    <input type="text" class="form-control" name="subject" id="subject" placeholder="Относно" data-rule="minlen:4" data-msg="Моля, въведете текст от поне четири символа!" />
+                    <div class="validation"></div>
+                </div>
+                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Напишете ни нещо" placeholder="Съобщение..."></textarea>
+                <div class="validation"></div>
+                <div class="text-center"><button type="submit">Изпрати запитване</button></div>
+            </form>
 
         </div>
     </section><!-- #contact -->
