--- a/src/Web/LearningPlusWebApp/Views/Shared/_Layout.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
         <div class="wrapper">
             <div class="contact-info float-left">
                 <i class="fa fa-envelope-o"></i> <a href="mailto:svetleto_gb@abv.bg">svetleto_gb@abv.bg</a>
-                <i class="fa fa-phone"></i> 0883 48-35-09
+                <i class="fa fa-phone"></i><a href="tel:+359883483509">0883 48-35-09</a>
             </div>
             <div class="social-links float-right">
                 <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
@@ -61,7 +61,7 @@
     <footer class="footer">
         <div class="container">
             <div class="copyright">
-                &copy; Copyright <strong>Reveal</strong>. All Rights Reserved
+                &copy; Copyright <strong>replicated with learning purpose</strong>. All Rights Reserved
             </div>
             <div class="credits">
                 Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
@@ -72,22 +72,22 @@
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
     @*<!-- JavaScript Libraries -->
-    <script src="/lib/jquery/jquery.min.js"></script>
-    <script src="/lib/jquery/jquery-migrate.min.js"></script>
-    <script src="/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="/lib/easing/easing.min.js"></script>
-    <script src="/lib/superfish/hoverIntent.js"></script>
-    <script src="/lib/superfish/superfish.min.js"></script>
-    <script src="/lib/wow/wow.min.js"></script>
-    <script src="/lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="/lib/magnific-popup/magnific-popup.min.js"></script>
-    <script src="/lib/sticky/sticky.js"></script>
+        <script src="/lib/jquery/jquery.min.js"></script>
+        <script src="/lib/jquery/jquery-migrate.min.js"></script>
+        <script src="/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <script src="/lib/easing/easing.min.js"></script>
+        <script src="/lib/superfish/hoverIntent.js"></script>
+        <script src="/lib/superfish/superfish.min.js"></script>
+        <script src="/lib/wow/wow.min.js"></script>
+        <script src="/lib/owlcarousel/owl.carousel.min.js"></script>
+        <script src="/lib/magnific-popup/magnific-popup.min.js"></script>
+        <script src="/lib/sticky/sticky.js"></script>
 
-    <!-- Contact Form JavaScript File -->
-    <script src="/contactform/contactform.js"></script>
+        <!-- Contact Form JavaScript File -->
+        <script src="/contactform/contactform.js"></script>
 
-    <!-- Template Main Javascript File -->
-    <script src="/js/main.js"></script>*@
+        <!-- Template Main Javascript File -->
+        <script src="/js/main.js"></script>*@
 
     @RenderSection("Scripts", required: false)
 </body>
