--- a/src/Web/LearningPlusWebApp/Views/Users/Login.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Users/Login.cshtml
@@ -4,41 +4,35 @@
     ViewData["Title"] = "Вписване";
 }
 
-@section Head{
-    <link href="~/css/site.css" rel="stylesheet">
-    <link href="~/css/bootstrap-social.css" rel="stylesheet" />
-}
-
-<h1 class="text-center">@ViewData["Title"]</h1>
-<hr class="quad-width" />
-<form class="mx-auto quad-width text-center" method="post" asp-controller="Users" asp-action="Login">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <div class="form-group">
-        <label asp-for="Username">Потребителско име</label>
-        <input type="text" class="form-control" name="username" placeholder="Портебителско име...">
+<div class="login">
+    <h1 class="page-title">@ViewData["Title"]</h1>
+    <form method="post" asp-controller="Users" asp-action="Login">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <label asp-for="Username" class="field-name">Потребителско име</label>
+        <label asp-for="Username" class="icon"><i class="fa fa-user"></i></label>
+        <input type="text" id="Username" name="username" placeholder="Портебителско име...">
         <span asp-validation-for="Username" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Password">Парола</label>
-        <input type="password" class="form-control" name="password" placeholder="Парола..." />
+        <label asp-for="Password" class="field-name">Парола</label>
+        <label asp-for="Password" class="icon"><i class="fa fa-key"></i></label>
+        <input type="password" name="password" id="Password" placeholder="Парола..." />
         <span asp-validation-for="Password" class="text-danger"></span>
-    </div>
-    <hr class="hr-login" />
-    <div class="checkbox">
-        <label><input type="checkbox" name="RememberMe" value="true"> Запомни ме</label>
-    </div>
-    <hr class="hr-login" />
-    <div class="button-holder d-flex justify-content-center">
-        <button type="submit" class="btn logo-btn">Вход</button>
-    </div>
-</form>
-<div class="text-center"><a href="/#contact">Забравена парола</a></div>
-<div class="text-center"><a asp-controller="Users" asp-action="RegisterStudent">Регистрирай се</a></div>
-<hr class="hr-login quad-width" />
-<div class="text-center">
-    <form asp-action="FacebookLogin" method="post">
-        <button type="submit" class="btn btn-facebook" name="provider" value="Facebook" title="Влез с Facebook">Facebook</button>
+        <hr class="hr-login" />
+        <div class="checkbox">
+            <label><input type="checkbox" name="RememberMe" value="true"> Запомни ме</label>
+        </div>
+        <hr class="hr-login" />
+        <div class="button-holder d-flex justify-content-center">
+            <button type="submit" class="btn logo-btn">Вход</button>
+        </div>
     </form>
+    <div class="text-center"><a href="/#contact">Забравена парола</a></div>
+    <div class="text-center"><a asp-controller="Users" asp-action="RegisterStudent">Регистрирай се</a></div>
+    <hr class="hr-login quad-width" />
+    <div class="text-center">
+        <form asp-action="FacebookLogin" method="post">
+            <button type="submit" class="btn btn-facebook" name="provider" value="Facebook" title="Влез с Facebook">Facebook</button>
+        </form>
+    </div>
 </div>
 <hr class="hr-login quad-width" />
 
