--- a/src/Web/LearningPlusWebApp/wwwroot/css/site.css
+++ b/src/Web/LearningPlusWebApp/wwwroot/css/site.css
@@ -6,6 +6,8 @@
 
 @import url('styles.css');
 
+@import url('login.css');
+
 /*@import url('site-header.css');*/
 /*@import url('site-footer.css');*/
 
