--- a/src/Web/LearningPlusWebApp/Views/Users/Login.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Users/Login.cshtml
@@ -16,26 +16,19 @@
         <label asp-for="Password" class="icon"><i class="fa fa-key"></i></label>
         <input type="password" name="password" id="Password" placeholder="Парола..." />
         <span asp-validation-for="Password" class="text-danger"></span>
-        <hr class="hr-login" />
-        <div class="checkbox">
-            <label><input type="checkbox" name="RememberMe" value="true"> Запомни ме</label>
+        <div class="rememberme">
+            <input type="checkbox" id="rememberme" name="RememberMe" value="true">
+            <label for="rememberme">Запомни ме</label>
         </div>
-        <hr class="hr-login" />
-        <div class="button-holder d-flex justify-content-center">
-            <button type="submit" class="btn logo-btn">Вход</button>
-        </div>
+        <button type="submit" class="btn logo-btn">Вход</button>
     </form>
     <div class="text-center"><a href="/#contact">Забравена парола</a></div>
     <div class="text-center"><a asp-controller="Users" asp-action="RegisterStudent">Регистрирай се</a></div>
-    <hr class="hr-login quad-width" />
-    <div class="text-center">
-        <form asp-action="FacebookLogin" method="post">
-            <button type="submit" class="btn btn-facebook" name="provider" value="Facebook" title="Влез с Facebook">Facebook</button>
-        </form>
-    </div>
+    <form asp-action="FacebookLogin" method="post">
+        <button type="submit" class="btn btn-facebook" name="provider" value="Facebook" title="Влез с Facebook">Facebook</button>
+    </form>
 </div>
-<hr class="hr-login quad-width" />
 
 @section Scripts{
-    <partial name="_ValidationScriptsPartial" />
+<partial name="_ValidationScriptsPartial" />
 }
