--- a/src/Web/LearningPlusWebApp/wwwroot/css/login.css
+++ b/src/Web/LearningPlusWebApp/wwwroot/css/login.css
@@ -1,47 +1,91 @@
 ﻿.login {
     width: 30%;
-    margin: 0 auto;
+    margin: 1em auto;
 }
 
-.page-title {
-    text-align: center;
-    border-bottom: 2px solid #000000;
-}
-
-form {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-    form .field-name {
-        flex: 0 0 100%;
+    .login .page-title {
         text-align: center;
+        border-bottom: 2px solid #000000;
     }
 
-    form input {
-        flex: 0 0 80%;
-        border: none;
-        border: 2px solid #0094ff;
-        border-left: none;
-        outline: none;
+    .login form {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
     }
 
-    form .icon:focus,
-    form .icon:hover {
-        border: 2px solid #ff0000;
-        border-right: none;
-    }
+        .login form .field-name {
+            flex: 0 0 100%;
+            text-align: center;
+        }
 
-        form .icon:focus + input,
-        form .icon:hover + input {
+        .login form > input {
+            flex: 0 0 80%;
+            border: none;
+            border: 2px solid #0094ff;
+            border-left: none;
+            outline: none;
+            border-top-right-radius: 0.3em;
+            border-bottom-right-radius: 0.3em;
+        }
+
+        .login form .icon:focus,
+        .login form .icon:hover {
+            border: 2px solid #ff0000;
+            border-right: none;
+        }
+
+        .login form .icon + input:focus,
+        .login form .icon + input:hover {
             border: 2px solid #ff0000;
             border-left: none;
         }
 
-    form label.icon {
-        flex: 0 0 5%;
-        padding: 0.4em;
-        border: 2px solid #0094ff;
-        border-right: none;
+        .login form label.icon {
+            flex: 0 0 5%;
+            padding: 0.4em;
+            border: 2px solid #0094ff;
+            border-right: none;
+            border-top-left-radius: 0.3em;
+            border-bottom-left-radius: 0.3em;
+        }
+
+        .login form .rememberme {
+            flex: 0 0 89%;
+            margin-top: 1em;
+            border-top: 1px solid #000000;
+            border-bottom: 1px solid #000000;
+            display: flex;
+            justify-content: center;
+            align-content: center;
+            padding: 1em 0;
+        }
+
+            .login form .rememberme label {
+            }
+
+            .login form .rememberme input {
+                margin-top: 0.4em;
+                margin-right: 0.4em;
+            }
+
+        .login form button {
+            flex: 0 0 30%;
+            margin: 1em;
+        }
+
+        .login form::after {
+            padding-left: 89%;
+            content: "";
+            border-bottom: 1px solid #000000;
+        }
+
+    .login .text-center {
+        text-align: center;
+    }
+
+    .login div + form::before {
+        padding-left: 89%;
+        content: "";
+        border-bottom: 1px solid #000000;
     }
