--- a/src/Web/LearningPlusWebApp/wwwroot/css/site.css
+++ b/src/Web/LearningPlusWebApp/wwwroot/css/site.css
@@ -8,6 +8,8 @@
 
 @import url('login.css');
 
+@import url('bootstrap-social.css');
+
 /*@import url('site-header.css');*/
 /*@import url('site-footer.css');*/
 
