Improve Ligin css and Index links.

--- a/src/Web/LearningPlusWebApp/Views/Home/Index.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 <!--==========================
     Intro Section
   ============================-->
-<section class="intro">
+<section id="intro" class="intro">
 
     <div class="intro-content">
         <h2>Направи <span>своя</span><br>успех реалност!</h2>
@@ -29,7 +29,7 @@
     <!--==========================
       About Section
     ============================-->
-    <section class="about">
+    <section id="about" class="about">
         <div class="img-container">
             <img src="https://www.timeshighereducation.com/sites/default/files/styles/the_breaking_news_image_style/public/istock-499343530.jpg?itok=4ObUNN41" alt="">
         </div>
@@ -48,7 +48,7 @@
     <!--==========================
       Services Section
     ============================-->
-    <section class="services">
+    <section id="services" class="services">
         <div class="section-header">
             <h2>Обучения</h2>
             <p>Качествени курсове за подготовка на кандидат-студенти, матури, изпити след 7 клас и чуждоезиково обучение.</p>
@@ -96,7 +96,7 @@
     <!--==========================
       Testimonials Section
     ============================-->
-    <section class="testimonials">
+    <section id="testimonials" class="testimonials">
         <div class="section-header">
             <h2>Препоръки</h2>
             <p>Мненията на нашите ученици и партньори.</p>
@@ -152,7 +152,7 @@
     <!--==========================
       Our Team Section
     ============================-->
-    <section class="team">
+    <section id="team" class="team">
         <div class="section-header">
             <h2>Нашите преподаватели</h2>
         </div>
@@ -218,7 +218,7 @@
     <!--==========================
       Contact Section
     ============================-->
-    <section class="contact">
+    <section id="contact" class="contact">
         <div class="section-header">
             <h2>Задайте ни въпрос</h2>
             <p>
