Introduce Gallery page

--- a/src/Web/LearningPlusWebApp/Views/Shared/_HeaderPartial.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Shared/_HeaderPartial.cshtml
@@ -59,6 +59,7 @@
                                 <li><a asp-controller="Home" asp-action="Consults">Образователни консултации</a></li>
                                 <li><a asp-controller="Home" asp-action="Profesion">Избор на професия</a></li>
                                 <li><a asp-controller="Home" asp-action="Development">Личностно развитие</a></li>
+                                <li><a asp-controller="Home" asp-action="Gallery">Галерия</a></li>
                             </ul>
                         </li>
                         <li><a href="/#contact">Контакт</a></li>
