--- a/src/Web/LearningPlusWebApp/wwwroot/scss/site.scss
+++ b/src/Web/LearningPlusWebApp/wwwroot/scss/site.scss
@@ -10,7 +10,7 @@
 
 @import 'bootstrap-social';
 
-/*@import url('site-header.css');*/
+@import 'gallery-grid';
 /*@import url('site-footer.css');*/
 
 /*@import url('navigation.css');*/
