--- a/src/Web/LearningPlusWebApp/wwwroot/css/site.css
+++ b/src/Web/LearningPlusWebApp/wwwroot/css/site.css
@@ -1954,7 +1954,69 @@ body.mobile-nav-active #mobile-nav-toggle {
   color: #720e9e;
   background-color: #fff; }
 
-/*@import url('../scss/site-header.css');*/
+.page-gallery {
+  background: url("https://images.unsplash.com/photo-1516979187457-637abb4f9353?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60") no-repeat;
+  background-size: cover;
+  margin-top: 2em; }
+
+.gallery {
+  padding: 0;
+  margin: 0;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-gap: 1em;
+  grid-auto-flow: dense; }
+
+.gallery a,
+.gallery span,
+.gallery img {
+  display: block; }
+
+.gallery img {
+  width: 100%;
+  height: auto; }
+
+.gallery li {
+  display: block;
+  list-style: none outside;
+  position: relative;
+  overflow: hidden;
+  grid-column: span 2; }
+
+.gallery li:before {
+  display: block;
+  content: '';
+  padding-top: 50%; }
+
+.gallery li.portrait {
+  grid-column: span 1;
+  grid-row: span 2; }
+
+.gallery li.portrait a {
+  display: flex; }
+
+.gallery li.small img,
+.gallery li.portrait img {
+  width: auto;
+  height: 100%; }
+
+.gallery li.portrait:before {
+  padding-top: 200%; }
+
+.gallery li.small {
+  grid-column: span 1;
+  grid-row: span 1; }
+
+.gallery li.small:before {
+  padding-top: 100%; }
+
+.gallery li > a {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0; }
+
 /*@import url('../scss/site-footer.css');*/
 /*@import url('../scss/navigation.css');*/
 /* @import url('../scss/transtions.css'); */
