Introduce gallery modal.

--- a/src/Web/LearningPlusWebApp/Views/Home/Gallery.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Home/Gallery.cshtml
@@ -17,12 +17,12 @@
                 </li>
                 <li class="portrait">
                     <a href="#">
-                        <span><img src="https://images.unsplash.com/photo-1509062522246-3755977927d7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=60" alt=""></span>
+                        <span><img src="https://images.unsplash.com/photo-1516381548400-349d680edb56?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=60" alt=""></span>
                     </a>
                 </li>
                 <li class="portrait">
                     <a href="#">
-                        <span><img src="https://images.unsplash.com/photo-1523240795612-9a054b0db644?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=60" alt=""></span>
+                        <span><img src="https://images.unsplash.com/photo-1518826778770-a729fb53327c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=60" alt=""></span>
                     </a>
                 </li>
                 <li>
@@ -45,7 +45,7 @@
 
                 <li class="portrait">
                     <a href="#">
-                        <span><img src="https://images.unsplash.com/photo-1504169448388-60f322bebb2c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=60" alt=""></span>
+                        <span><img src="https://images.unsplash.com/photo-1471970471555-19d4b113e9ed?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=350&q=60" alt=""></span>
                     </a>
                 </li>
                 <li class="">
@@ -84,3 +84,13 @@
         </div>
     </section>
 </div>
+
+<div class="modal">
+    <div class="inner">
+        <span><img src="https://images.unsplash.com/photo-1563285950-63fab3e6bb84?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2350&q=80" alt=""></span>
+    </div>
+</div>
+
+@section Scripts {
+    <script src="~/js/modal.js"></script>
+}
