--- a/src/Web/LearningPlusWebApp/wwwroot/scss/site.scss
+++ b/src/Web/LearningPlusWebApp/wwwroot/scss/site.scss
@@ -11,6 +11,8 @@
 @import 'bootstrap-social';
 
 @import 'gallery-grid';
+
+@import 'modal';
 /*@import url('site-footer.css');*/
 
 /*@import url('navigation.css');*/
