--- a/src/Web/LearningPlusWebApp/wwwroot/scss/_gallery-grid.scss
+++ b/src/Web/LearningPlusWebApp/wwwroot/scss/_gallery-grid.scss
@@ -1,72 +1,86 @@
 .page-gallery {
     background: url('https://images.unsplash.com/photo-1516979187457-637abb4f9353?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60') no-repeat;
-    background-size:cover;
-    margin-top:2em;
-}
+    background-size: cover;
+    margin-top: 2em;
 
-.gallery {
-    padding: 0;
-    margin: 0;
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-gap: 1em;
-    grid-auto-flow: dense;
-}
 
-.gallery a,
-.gallery span,
-.gallery img {
-    display: block;
-}
+    .gallery {
+        padding: 0;
+        margin: 0;
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        grid-gap: 1em;
+        grid-auto-flow: dense;
 
-.gallery img {
-    width: 100%;
-    height: auto;
-}
 
-.gallery li {
-    display: block;
-    list-style: none outside;
-    position: relative;
-    overflow: hidden;
-    grid-column: span 2;
-}
+        a,
+        span,
+        img {
+            display: block;
+        }
 
-.gallery li:before {
-    display: block;
-    content: '';
-    padding-top: 50%;
-}
+        img {
+            width: 100%;
+            height: auto;
+        }
 
-.gallery li.portrait {
-    grid-column: span 1;
-    grid-row: span 2;
-}
+        li {
+            display: block;
+            list-style: none outside;
+            position: relative;
+            overflow: hidden;
+            grid-column: span 2;
+            transition: transform 0.3s ease-in-out;
 
-.gallery li.portrait a {
-    display: flex;
-}
+            &:hover {
+                transform: translate(-3%);
+                outline: 0.3em solid #00ff21;
+            }
 
-.gallery li.small img,
-.gallery li.portrait img {
-    width: auto;
-    height: 100%;
-}
 
-.gallery li.portrait:before {
-    padding-top: 200%;
-}
+            &:before {
+                display: block;
+                content: '';
+                padding-top: 50%;
+            }
 
-.gallery li.small {
-    grid-column: span 1;
-    grid-row: span 1;
-}
+            &.portrait {
+                grid-column: span 1;
+                grid-row: span 2;
+            }
 
-.gallery li.small:before {
-    padding-top: 100%;
-}
+            &.portrait a {
+                display: flex;
+            }
 
-.gallery li > a {
-    position: absolute;
-    top: 0; left: 0; right: 0; bottom: 0;
+
+            &.small img,
+            &.portrait img {
+                width: auto;
+                height: 100%;
+            }
+
+            &.portrait:before {
+                padding-top: 200%;
+            }
+
+            &.small {
+                grid-column: span 1;
+                grid-row: span 1;
+            }
+
+            &.small:before {
+                padding-top: 100%;
+            }
+
+
+            > a {
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+            }
+        }
+    }
 }
