--- a/src/Web/LearningPlusWebApp/Views/Shared/_HeaderPartial.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Shared/_HeaderPartial.cshtml
@@ -6,7 +6,7 @@
         <div class="wrapper">
 
             <div class="logo">
-                <h1><a asp-controller="Home" asp-action="Index" class="scrollto">Научи<span>Повече</span></a></h1>
+                <h1><a asp-controller="Home" asp-action="Index">Научи<span>Повече</span></a></h1>
             </div>
 
             <nav>
