--- a/src/Web/LearningPlusWebApp/wwwroot/css/site.css
+++ b/src/Web/LearningPlusWebApp/wwwroot/css/site.css
@@ -1,15 +1,20 @@
 ﻿@import url("https://fonts.googleapis.com/css?family=Fira+Sans:400,400i,700,700i|Merriweather:400,400i,700,700i&display=swap");
 :root {
-  --font-size-body: 14px;
-  --font-size-body-larger: 16px;
-  --font-size-body-big: 18px;
-  --font-size-body-huge: 20px;
-  --layout-main-width: 60em;
-  --color-body-text: #000;
-  --color-body-bgrd: #FFF;
-  --color-link-default: #A00;
-  --color-border-default: #999;
-  --spacing-layout-elements: 2em; }
+  --color-theme: #50d8af;
+  /*--font-size-body: 14px; 
+    --font-size-body-larger: 16px;
+    --font-size-body-big: 18px;
+    --font-size-body-huge: 20px;
+
+    --layout-main-width: 60em;
+
+    --color-body-text: #000;
+    --color-body-bgrd: #FFF;
+    --color-link-default: #A00;
+
+    --color-border-default: #999;
+
+    --spacing-layout-elements: 2em;*/ }
 
 *, *:before, *:after {
   margin: 0;
@@ -1026,32 +1031,40 @@ body.mobile-nav-active #mobile-nav-toggle {
     display: flex;
     flex-wrap: wrap;
     justify-content: center; }
-    .login form .field-name {
+    .login form .field {
+      display: flex;
+      flex-wrap: wrap;
       flex: 0 0 100%;
-      text-align: center; }
-    .login form > input {
-      flex: 0 0 80%;
-      border: none;
-      border: 2px solid #0094ff;
-      border-left: none;
-      outline: none;
-      border-top-right-radius: 0.3em;
-      border-bottom-right-radius: 0.3em; }
-    .login form .icon:focus,
-    .login form .icon:hover {
-      border: 2px solid #ff0000;
-      border-right: none; }
-    .login form .icon + input:focus,
-    .login form .icon + input:hover {
-      border: 2px solid #ff0000;
-      border-left: none; }
-    .login form label.icon {
-      flex: 0 0 5%;
-      padding: 0.4em;
-      border: 2px solid #0094ff;
-      border-right: none;
-      border-top-left-radius: 0.3em;
-      border-bottom-left-radius: 0.3em; }
+      justify-content: center; }
+      .login form .field .field-name {
+        flex: 0 0 100%;
+        text-align: center; }
+      .login form .field > input {
+        flex: 0 0 80%;
+        border: none;
+        border: 2px solid #0094ff;
+        border-left: none;
+        outline: none;
+        border-top-right-radius: 0.3em;
+        border-bottom-right-radius: 0.3em;
+        order: 2; }
+      .login form .field input:focus,
+      .login form .field input:hover {
+        border: 2px solid var(--color-theme, #50d8af);
+        border-left: none; }
+        .login form .field input:focus + label,
+        .login form .field input:focus + label,
+        .login form .field input:hover + label,
+        .login form .field input:hover + label {
+          border: 2px solid var(--color-theme, #50d8af);
+          border-right: none; }
+      .login form .field label.icon {
+        flex: 0 0 5%;
+        padding: 0.4em;
+        border: 2px solid #0094ff;
+        border-right: none;
+        border-top-left-radius: 0.3em;
+        border-bottom-left-radius: 0.3em; }
     .login form .rememberme {
       flex: 0 0 89%;
       margin-top: 1em;
