--- a/src/Web/LearningPlusWebApp/wwwroot/scss/_variables.scss
+++ b/src/Web/LearningPlusWebApp/wwwroot/scss/_variables.scss
@@ -1,5 +1,6 @@
 :root {
-    --font-size-body: 14px; 
+    --color-theme: #50d8af;
+    /*--font-size-body: 14px; 
     --font-size-body-larger: 16px;
     --font-size-body-big: 18px;
     --font-size-body-huge: 20px;
@@ -12,5 +13,5 @@
 
     --color-border-default: #999;
 
-    --spacing-layout-elements: 2em;
+    --spacing-layout-elements: 2em;*/
 }
